# python-rye-template

./: .gitignore  README.md  install-hooks.sh  pyproject.toml
src/: example_notebook.ipynb
src/scripts/: run_foo.py
